[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8"
panic-halt="0.2"
gd32vf103xx-hal = "0.5.0"
embedded-hal = "0.2.3"

[profile.release]
codegen-units= 1
lto = true
opt-level="z"
