[package]
name = "keyboard_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8"
panic-halt="0.2"
gd32vf103xx-hal = "0.5.0"
embedded-hal = "0.2.3"
sh1106 = "0.4.0"
embedded-graphics = "0.7.1"
nb = "1.0.0"
riscv = "0.8.0"
heapless = "0.7.13"
ufmt = "0.1.0"

[features]
default = ["heapless/ufmt-impl"]

[profile.release]
codegen-units= 1
lto = true
opt-level="z"
panic= 'abort'
#debug = 0
strip = true
overflow-checks = false
